--- a/app/views/products/show.html.slim
+++ b/app/views/products/show.html.slim
@@ -11,6 +11,7 @@ p
   = @product.price
 
 = form_with(model: Order.new, local: true, url: orders_path, method: :post, id: 'payment-form', class: 'js-order-form') do |form|
+  = form.hidden_field :product_id, value: @product.id
   #card-element
   #card-expiry-element
   #card-cvc-element
